--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,6 +24,8 @@ jobs:
           run: yarn eslint
         - name: Build
           run: yarn build
+        - name: Run test
+          run: yarn test:all
         - name: Cache dependencies
           uses: actions/cache@v2
           with:
