--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,7 +22,7 @@ jobs:
           run: yarn install --no-audit --no-fund --no-optional
         - name: Lint
           run: yarn eslint
-        - name: build
+        - name: Build
           run: yarn build
         - name: Run test
           run: yarn test:all
