--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,10 +7,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
+    runs-on: ubuntu-latest
     steps:
         - uses: actions/checkout@v2
           with:
@@ -22,7 +19,7 @@ jobs:
           run: yarn install --no-audit --no-fund --no-optional
         - name: Lint
           run: yarn eslint
-        - name: Build
+        - name: build
           run: yarn build
         - name: Run test
           run: yarn test:all
